# emu3bm

./: .gitignore  Makefile.am  README.md  configure.ac
man/: Makefile.am  emu3bm.man  emu4bm.man
res/: Makefile.am  empty_bank  empty_bank_emu3x  empty_bank_esi2000
src/: Makefile.am  emu3bm.c  emu3bm.h  main.c  main_emu3bm.c  main_emu4bm.c  notes.c  sample.c  sample.h  sfz.h  sfz.l  sfz.y  utils.c  utils.h
test/: Makefile.am  emu3_test_add_preset.sh  emu3_test_add_sample.sh  emu3_test_add_sfz.sh  emu3_test_add_zone.sh  emu3_test_create_bank.sh  emu3_test_edit_parameter.sh  emu3_test_extract_samples.sh  emu4_test_add_sample.sh  emu4_test_create_bank.sh  emu4_test_extract_samples.sh  test_add_preset.sh  test_add_sample.sh  test_add_zone.sh  test_common.sh  test_create_bank.sh  test_edit_parameter.sh  test_extract_samples.sh  tests_emu3bm.c
test/data/: emu3_test_add_preset_1  emu3_test_add_preset_2  emu3_test_add_sample_1  emu3_test_add_sample_2  emu3_test_add_sample_3  emu3_test_add_sample_4  emu3_test_add_sample_5  emu3_test_add_sample_6  emu3_test_add_sfz_1  emu3_test_add_sfz_2  emu3_test_add_sfz_3  emu3_test_add_sfz_6  emu3_test_add_sfz_7  emu3_test_add_sfz_8  emu3_test_add_sfz_9  emu3_test_add_zone_1  emu3_test_add_zone_2  emu3_test_add_zone_3  emu3_test_add_zone_4  emu3_test_add_zone_5  emu3_test_create_bank_emu3x  emu3_test_create_bank_esi2000  emu3_test_edit_parameter_1  emu4_test_add_sample_1  emu4_test_add_sample_2  emu4_test_create_bank  test1.sfz  test2.sfz  test3.sfz  test4.sfz  test5.sfz  test6.sfz  test7.sfz  test8.sfz  test9.sfz  test_add_preset_1  test_add_preset_2  test_add_sample_1  test_add_sample_2  test_add_sample_3  (+13 more)
